--- a/commitment.html
+++ b/commitment.html
@@ -5,37 +5,30 @@
   <title>Our Commitment – Iron Dillo</title>
   <meta name="description" content="Iron Dillo Cybersecurity’s commitment to integrity, transparency, and client trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://cdn.tailwindcss.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-<!-- 🛡 Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="X-Frame-Options" content="DENY">
-<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-<meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
-  <link rel="canonical" href="https://irondillo.com/commitment.html" />
+
+  <!-- Fonts & Tailwind -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          armadilloBlack: "#1A1A1A",
-          armadilloGray: "#4A4A4A",
-          oliveGreen: "#6B7B3C",
-          oliveDark: "#55622F",
-          offWhite: "#F8F9FA"
-        },
-        fontFamily: {
-          inter: ["Inter", "sans-serif"]
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
         }
       }
     }
-  };
-</script>
+  </script>
 </head>
 
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
@@ -43,25 +36,24 @@
   <!-- Logo Header -->
   <header class="text-center pt-8">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Commitment</h1>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
-    <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-3">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-3">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-3">About</a>
-      <a href="/blog.html" class="text-oliveGreen font-semibold hover:underline px-3">Blog</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-3">Contact</a>
+  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between px-4">
+      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Home</a>
+      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Services</a>
+      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">About</a>
+      <a href="/blog.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Blog</a>
+      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Contact</a>
     </div>
   </nav>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12">
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 text-armadilloGray">
-      <h1 class="text-3xl font-extrabold text-oliveGreen mb-6">Our Commitment</h1>
-
-      <p class="mb-6">
+    <section class="bg-white rounded-lg shadow-lg p-8 text-armadilloBlack">
+      <p class="mb-6 leading-relaxed">
         At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting with your best interests in mind.
       </p>
 
@@ -74,14 +66,14 @@
         <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
       </ul>
 
-      <p>
+      <p class="leading-relaxed">
         Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
       </p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
     <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
