--- a/thank-you.html
+++ b/thank-you.html
@@ -2,11 +2,8 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Thank You | Iron Dillo Cybersecurity</title>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
-  
-  <!-- Tailwind & Font Config -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -20,8 +17,14 @@
             oliveDark: "#55622F",
             offWhite: "#F8F9FA"
           },
-          fontFamily: {
-            inter: ["Inter", "sans-serif"]
+          fontFamily: { inter: ["Inter", "sans-serif"] },
+          keyframes: {
+            fadeIn: { "0%": { opacity: 0 }, "100%": { opacity: 1 } },
+            scaleUp: { "0%": { transform: "scale(0.8)" }, "100%": { transform: "scale(1)" } }
+          },
+          animation: {
+            fadeIn: "fadeIn 1s ease-out forwards",
+            scaleUp: "scaleUp 0.6s ease-out forwards"
           }
         }
       }
@@ -31,37 +34,35 @@
 <body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
 
   <!-- Header -->
-  <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img src="/assets/irondillo-preview.png" alt="Iron Dillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+  <header class="text-center pt-12 max-w-3xl mx-auto">
+    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-28 h-auto" />
   </header>
 
-  <!-- Navigation -->
-  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
-    <div class="flex justify-between px-4">
-      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Contact</a>
+  <!-- Thank You Message -->
+  <main class="flex-grow flex flex-col items-center justify-center px-6 text-center">
+    <!-- Animated Checkmark -->
+    <div class="bg-oliveGreen text-white rounded-full w-20 h-20 flex items-center justify-center shadow-lg animate-scaleUp">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+      </svg>
     </div>
-  </nav>
 
-  <!-- Message -->
-  <main class="flex-grow max-w-xl w-full bg-white rounded-lg p-8 shadow-lg mx-auto text-center">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Thank You!</h1>
-    <p class="text-armadilloBlack mb-8">
-      Your message has been successfully sent. I'll get back to you soon.
+    <!-- Message -->
+    <h1 class="mt-6 text-3xl font-bold text-oliveGreen animate-fadeIn">Message Sent Successfully!</h1>
+    <p class="mt-4 text-armadilloGray animate-fadeIn">
+      Thank you for reaching out to Iron Dillo Cybersecurity.<br>
+      I’ll get back to you shortly.
     </p>
-    <a href="/index.html" 
-       class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-md inline-block">
-       Return to Home
+
+    <!-- CTA -->
+    <a href="/index.html" class="mt-8 inline-block bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg animate-fadeIn">
+      Return to Home
     </a>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm">
+    &copy; 2025 Iron Dillo. Veteran-Owned. Mission-Driven.
   </footer>
 
 </body>
