--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
   <meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+
   <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -27,8 +27,8 @@
       }
     }
   </script>
-  
-  <!-- Security Headers -->
+
+  <!-- 🛡 Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="DENY">
@@ -40,13 +40,13 @@
 
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
-  <!-- Header with logo and nav -->
-  <header class="p-8 text-center max-w-3xl mx-auto fade-in">
+  <!-- Header Logo -->
+  <header class="text-center pt-8 max-w-3xl mx-auto">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="mx-auto mb-6 w-32 h-auto" />
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Iron Dillo Cybersecurity</h1>
+  </header>
 
-    <!-- Navigation -->
-     <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+  <!-- Navigation -->
+  <nav class="bg-armadilloBlack rounded-md w-full mb-6">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -54,9 +54,11 @@
       <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
     </div>
   </nav>
-    
-    <!-- Intro -->
-    <p class="text-lg leading-relaxed max-w-xl mx-auto text-armadilloGray mb-6">
+
+  <!-- Page Title -->
+  <section class="text-center max-w-3xl mx-auto mb-8">
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-4">Iron Dillo Cybersecurity</h1>
+    <p class="text-lg leading-relaxed text-armadilloGray">
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
@@ -64,48 +66,40 @@
       Founded by a <span class="text-oliveGreen font-medium">U.S. Army veteran</span> with a Master’s in Cybersecurity,
       Iron Dillo provides remote diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
+  </section>
 
-    <!-- Call to Action Buttons -->
-    <div class="mt-4 flex flex-wrap gap-4 justify-center">
-      <a href="/contact.html"
-         class="inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
-         Schedule Your $199 Security Check
-      </a>
-      <a href="/lindale-tyler-cybersecurity.html"
-         class="inline-block bg-armadilloGray text-offWhite px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
-         Lindale & Tyler Cybersecurity
-      </a>
-    </div>
-  </header>
+  <!-- Call to Action -->
+  <section class="flex flex-wrap gap-4 justify-center mb-12">
+    <a href="/contact.html"
+       class="inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+       Schedule Your $199 Security Check
+    </a>
+    <a href="/lindale-tyler-cybersecurity.html"
+       class="inline-block bg-armadilloGray text-offWhite px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+       Lindale & Tyler Cybersecurity
+    </a>
+  </section>
 
-   <!-- Footer with socials directly above -->
+  <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center p-8 mt-auto text-sm max-w-3xl mx-auto rounded-md">
-    
-    <!-- Social icons -->
+    <!-- Social Icons -->
     <div class="mb-6">
       <p class="text-oliveGreen font-semibold mb-4">Connect with me</p>
       <div class="inline-flex justify-center space-x-10">
         <!-- GitHub -->
         <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
-          </svg>
+          <!-- GitHub SVG -->
         </a>
         <!-- Facebook -->
         <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
-          </svg>
+          <!-- Facebook SVG -->
         </a>
         <!-- LinkedIn -->
         <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37 4.271 5.452v6.291zM5.337 7.433c-1.144 0-2.07-.927-2.07-2.07 0-1.144.926-2.07 2.07-2.07 1.143 0 2.07.926 2.07 2.07 0 1.143-.927 2.07-2.07 2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .792 0 1.77v20.451C0 23.207.792 24 1.77 24h20.451C23.208 24 24 23.207 24 22.222V1.77C24 .792 23.208 0 22.225 0z"/>
-          </svg>
+          <!-- LinkedIn SVG -->
         </a>
       </div>
     </div>
-
     <p class="mt-4 italic">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="mt-4 space-x-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
