--- a/index.html
+++ b/index.html
@@ -28,75 +28,78 @@
     }
   </script>
 
-  <!-- 🛡 Security Headers -->
+  <!-- Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" href="/assets/favicon.png" />
 </head>
 
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Header Logo -->
-  <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="mx-auto mb-6 w-32 h-auto" />
+  <header class="text-center pt-12 max-w-3xl mx-auto">
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="mx-auto mb-8 w-40 h-auto" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md w-full mb-6">
+  <nav class="bg-armadilloBlack rounded-md w-full mb-12 shadow-md">
     <div class="flex justify-evenly flex-wrap">
-      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+      <a href="/index.html" class="py-4 px-6 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+      <a href="/services.html" class="py-4 px-6 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+      <a href="/about.html" class="py-4 px-6 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+      <a href="/contact.html" class="py-4 px-6 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
     </div>
   </nav>
 
-  <!-- Page Title -->
-  <section class="text-center max-w-3xl mx-auto mb-8">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-4">Iron Dillo Cybersecurity</h1>
+  <!-- Page Title & Intro -->
+  <section class="text-center max-w-3xl mx-auto mb-12 px-6">
+    <h1 class="text-5xl font-extrabold text-oliveGreen mb-6">Iron Dillo Cybersecurity</h1>
     <p class="text-lg leading-relaxed text-armadilloGray">
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
-      <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
+      <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.  
       Founded by a <span class="text-oliveGreen font-medium">U.S. Army veteran</span> with a Master’s in Cybersecurity,
       Iron Dillo provides remote diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
   </section>
 
   <!-- Call to Action -->
-  <section class="flex flex-wrap gap-4 justify-center mb-12">
+  <section class="flex flex-wrap gap-6 justify-center mb-20">
     <a href="/contact.html"
-       class="inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+       class="inline-block bg-oliveGreen text-white px-8 py-4 rounded-lg shadow-lg hover:bg-oliveDark transition text-lg font-semibold">
        Schedule Your $199 Security Check
     </a>
     <a href="/lindale-tyler-cybersecurity.html"
-       class="inline-block bg-armadilloGray text-offWhite px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+       class="inline-block bg-armadilloGray text-offWhite px-8 py-4 rounded-lg shadow-lg hover:bg-oliveDark transition text-lg font-semibold">
        Lindale & Tyler Cybersecurity
     </a>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center p-8 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloBlack text-offWhite text-center p-10 mt-auto text-sm max-w-3xl mx-auto rounded-md shadow-lg">
     <!-- Social Icons -->
-    <div class="mb-6">
+    <div class="mb-8">
       <p class="text-oliveGreen font-semibold mb-4">Connect with me</p>
       <div class="inline-flex justify-center space-x-10">
         <!-- GitHub -->
-        <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <!-- GitHub SVG -->
+        <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
+           class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96..."/>
+          </svg>
         </a>
         <!-- Facebook -->
-        <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <!-- Facebook SVG -->
+        <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
+           class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342..."/>
+          </svg>
         </a>
         <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-          <!-- LinkedIn SVG -->
+        <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn"
+           class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20.447 20.452h-3.554v-5.569c0-1.328..."/>
+          </svg>
         </a>
       </div>
     </div>
