--- a/about.html
+++ b/about.html
@@ -2,8 +2,13 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
+  <title>About | Iron Dillo Cybersecurity</title>
   <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned business protecting East Texas individuals and small businesses with practical, trustworthy security solutions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Fonts & Tailwind -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -29,14 +34,14 @@
 </head>
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
-  <!-- Header -->
+  <!-- Logo + Title -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
     <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
     <h1 class="text-4xl font-extrabold text-oliveGreen">About Iron Dillo Cybersecurity</h1>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+  <nav class="bg-armadilloBlack rounded-md mt-6 mb-10 w-full fade-in">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -46,38 +51,33 @@
   </nav>
 
   <!-- Main Content -->
-  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
-    
-<title>About | Iron Dillo Cybersecurity</title>
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-12 fade-in">
     
     <!-- Intro -->
-    <section class="bg-white rounded-lg shadow-lg p-8 text-center">
-      <p class="text-armadilloBlack leading-relaxed">
+    <section class="bg-white rounded-lg shadow-lg p-10 text-center">
+      <p class="text-armadilloBlack leading-relaxed text-lg">
         Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
         small businesses, and rural communities across East Texas with practical, trustworthy cybersecurity solutions.
       </p>
     </section>
 
     <!-- Story -->
-    <section class="bg-white rounded-lg shadow-lg p-8 flex flex-col md:flex-row items-center gap-8">
-      <!-- Image -->
-      <div class="w-40 h-40 md:w-56 md:h-56 flex-shrink-0">
+    <section class="bg-white rounded-lg shadow-lg p-10 flex flex-col md:flex-row items-center gap-10">
+      <div class="w-48 h-48 md:w-56 md:h-56 flex-shrink-0">
         <img 
           src="/assets/Dilloman.png" 
           alt="Kris McCoy" 
           class="rounded-full object-cover w-full h-full shadow-md"
         >
       </div>
-
-      <!-- Text -->
       <div>
         <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Meet Kris McCoy</h2>
-        <p class="text-armadilloBlack leading-relaxed">
+        <p class="text-armadilloBlack leading-relaxed mb-4">
           I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
           I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
           the WGU Business School. Today, I’m proud to be active in the East Texas business community!
         </p>
-        <p class="text-armadilloBlack leading-relaxed mt-4">
+        <p class="text-armadilloBlack leading-relaxed">
           I am pursuing the CISSP to strengthen my ability to serve clients,
           bringing the same discipline, vigilance, and integrity from my military service into every project.
         </p>
@@ -85,9 +85,9 @@
     </section>
 
     <!-- Ethics Commitment -->
-    <section class="bg-white rounded-lg shadow-lg p-8">
+    <section class="bg-white rounded-lg shadow-lg p-10">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Commitment to Professional Ethics</h2>
-      <p class="text-armadilloBlack leading-relaxed">
+      <p class="text-armadilloBlack leading-relaxed mb-4">
         As a member of <span class="font-semibold">ISC2</span>, I keep their 
         <a href="https://www.isc2.org/Ethics" target="_blank" class="text-oliveGreen hover:underline">
           Code of Ethics
@@ -95,23 +95,23 @@
         These principles emphasize protecting society, acting with honesty and diligence, 
         delivering competent service, and advancing the cybersecurity profession for the future.
       </p>
-      <p class="text-armadilloBlack leading-relaxed mt-4">
+      <p class="text-armadilloBlack leading-relaxed">
         For my clients, this means every engagement is conducted with transparency, responsibility, and 
         a commitment to solutions that put their security and trust first.
       </p>
     </section>
 
     <!-- Values -->
-    <section class="py-12 grid gap-6 md:grid-cols-3 text-center">
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+    <section class="grid gap-8 md:grid-cols-3 text-center">
+      <div class="bg-white p-8 rounded-lg shadow-lg">
         <h3 class="text-xl font-bold text-oliveGreen mb-2">Integrity</h3>
         <p class="text-armadilloBlack text-sm">Honest, ethical guidance in every engagement.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white p-8 rounded-lg shadow-lg">
         <h3 class="text-xl font-bold text-oliveGreen mb-2">Discipline</h3>
         <p class="text-armadilloBlack text-sm">A veteran’s focus on detail and thoroughness.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white p-8 rounded-lg shadow-lg">
         <h3 class="text-xl font-bold text-oliveGreen mb-2">Resilience</h3>
         <p class="text-armadilloBlack text-sm">Helping your business prepare, withstand, and recover from threats.</p>
       </div>
@@ -120,21 +120,25 @@
     <!-- Call to Action -->
     <section class="bg-armadilloBlack py-12 text-center rounded-lg shadow-lg">
       <h2 class="text-2xl font-bold text-offWhite mb-4">Ready to Secure Your Business?</h2>
-      <p class="text-offWhite max-w-xl mx-auto">
+      <p class="text-offWhite max-w-xl mx-auto mb-6">
         Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for East Texas 
         individuals and businesses. Let’s talk about the right plan for your needs.
       </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg transition">
+      <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg transition">
         Contact Me Today
       </a>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm rounded-md fade-in">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-12 text-sm rounded-md fade-in">
+    <p class="mb-4 italic">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <div class="mt-2 space-x-4">
+      <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a>
+      <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+      <a href="/commitment.html" class="hover:underline text-oliveGreen">Our Commitment</a>
+    </div>
+    <p class="mt-4">&copy; 2025 Iron Dillo. All rights reserved.</p>
   </footer>
 
 </body>
