--- a/index.html
+++ b/index.html
@@ -74,29 +74,54 @@
     <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
 
     <!-- Social Icons -->
-    <div class="inline-flex justify-center space-x-10 mb-8">
-      <!-- GitHub -->
-      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8..."/>
-        </svg>
-      </a>
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M22.675 0h-21.35C.6 0 0 .6..."/>
-        </svg>
-      </a>
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M20.447 20.452h-3.554v-5.569..."/>
-        </svg>
-      </a>
-    </div>
+<div class="inline-flex justify-center space-x-10 mb-8">
+  <!-- GitHub -->
+  <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
+     class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.82-.26.82-.58 
+               0-.29-.01-1.05-.02-2.07-3.34.73-4.04-1.61-4.04-1.61-.54-1.37-1.33-1.74-1.33-1.74-1.09-.75.08-.74.08-.74 
+               1.2.09 1.83 1.24 1.83 1.24 1.07 1.83 2.8 1.3 3.48.99.11-.78.42-1.3.76-1.6-2.67-.3-5.48-1.34-5.48-5.95 
+               0-1.32.47-2.4 1.24-3.25-.12-.3-.54-1.51.12-3.15 0 0 1.01-.32 3.3 1.23a11.4 11.4 0 0 1 6 0c2.29-1.55 
+               3.3-1.23 3.3-1.23.66 1.64.24 2.85.12 3.15.77.85 1.24 1.93 1.24 3.25 
+               0 4.62-2.81 5.65-5.49 5.95.43.37.81 1.1.81 2.22 
+               0 1.6-.01 2.89-.01 3.28 0 .32.22.69.83.57A12.01 12.01 0 0 0 24 12c0-6.63-5.37-12-12-12z"/>
+    </svg>
+  </a>
+
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
+     class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 
+               1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 
+               1.893-4.788 4.659-4.788 1.325 0 2.466.099 
+               2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 
+               1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 
+               24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
+    </svg>
+  </a>
+
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn"
+     class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.854 
+               0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 
+               1.637-1.852 3.37-1.852 3.604 0 4.271 2.37 
+               4.271 5.452v6.291zM5.337 7.433c-1.144 
+               0-2.07-.927-2.07-2.07 0-1.144.926-2.07 
+               2.07-2.07 1.143 0 2.07.926 
+               2.07 2.07 0 1.143-.927 2.07-2.07 
+               2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 
+               0H1.771C.792 0 0 .792 0 1.77v20.451C0 
+               23.207.792 24 1.77 24h20.451C23.208 24 
+               24 23.207 24 22.222V1.77C24 .792 23.208 
+               0 22.225 0z"/>
+    </svg>
+  </a>
+</div>
+
 
     <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
